log
Sat 23 Sep 2023 07:33:58 PM UTC: 
 heap.c | 29 ++++++++++++++++++++++++-----
 1 file changed, 24 insertions(+), 5 deletions(-)
 tests:  0|4
total_score: 0/70
e2d302e
Thu 28 Sep 2023 01:57:19 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|4
total_score: 0/70
ff43171
Thu 28 Sep 2023 01:59:03 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
7b932c0
Thu 28 Sep 2023 01:59:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51b2fa5
Thu 28 Sep 2023 07:04:27 PM UTC: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
298eae6
Thu 28 Sep 2023 07:11:31 PM UTC: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|3
total_score: 10/70
7ba45d7
Thu 28 Sep 2023 07:12:56 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|3
total_score: 10/70
02b26de
Thu 28 Sep 2023 07:14:41 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
7fcddaf
Thu 28 Sep 2023 07:26:51 PM UTC: 
 heap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  7|1
total_score: 45/70
ae4ddea
Thu 28 Sep 2023 07:27:41 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 45/70
c94f6f2
Thu 28 Sep 2023 07:39:15 PM UTC: 
 heap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
aaba330
Fri 29 Sep 2023 06:57:52 PM UTC: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:118:9: error: unused variable ‘maximo’ [-Werror=unused-variable]
  118 |   void* maximo = heap_top(pq);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4172972
Fri 29 Sep 2023 06:58:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c:115:7: error: conflicting types for ‘heap_pop’; have ‘void *(Heap *)’ {aka ‘void *(struct Heap *)’}
  115 | void* heap_pop(Heap* pq){
      |       ^~~~~~~~
In file included from heap.c:6,
                 from test.c:4:
heap.h:9:6: note: previous declaration of ‘heap_pop’ with type ‘void(Heap *)’ {aka ‘void(struct Heap *)’}
    9 | void heap_pop(Heap* pq);
      |      ^~~~~~~~
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:125:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  125 |   return;
      |   ^~~~~~
heap.c:115:7: note: declared here
  115 | void* heap_pop(Heap* pq){
      |       ^~~~~~~~
heap.c:118:9: error: unused variable ‘maximo’ [-Werror=unused-variable]
  118 |   void* maximo = heap_top(pq);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
78e6d03
Fri 29 Sep 2023 07:00:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:118:9: error: unused variable ‘maximo’ [-Werror=unused-variable]
  118 |   void* maximo = heap_top(pq);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b70d59
Sat 30 Sep 2023 02:14:08 AM UTC: 
 heap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:119:9: error: unused variable ‘maximo’ [-Werror=unused-variable]
  119 |   void* maximo = heap_top(pq);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f97c450
Sat 30 Sep 2023 02:15:17 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:119:9: error: unused variable ‘maximo’ [-Werror=unused-variable]
  119 |   void* maximo = heap_top(pq);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cdc6b2b
Sat 30 Sep 2023 02:16:03 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:119:9: error: unused variable ‘maximo’ [-Werror=unused-variable]
  119 |   void* maximo = pq -> heapArray[0].data;
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b4b79b9
Sat 30 Sep 2023 02:24:12 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:125:3: error: implicit declaration of function ‘heapifyDown’ [-Werror=implicit-function-declaration]
  125 |   heapifyDown(pq, 0);
      |   ^~~~~~~~~~~
heap.c:127:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  127 |   return maximo;
      |          ^~~~~~
heap.c:115:6: note: declared here
  115 | void heap_pop(Heap* pq){
      |      ^~~~~~~~
heap.c: At top level:
heap.c:131:6: error: conflicting types for ‘heapifyDown’; have ‘void(Heap *, int)’ {aka ‘void(struct Heap *, int)’} [-Werror]
  131 | void heapifyDown(Heap* pq, int posicion) {
      |      ^~~~~~~~~~~
heap.c:125:3: note: previous implicit declaration of ‘heapifyDown’ with type ‘void(Heap *, int)’ {aka ‘void(struct Heap *, int)’}
  125 |   heapifyDown(pq, 0);
      |   ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e6836a5
